--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -192,6 +192,7 @@ if ( DETRAN_ENABLE_TEST )
     include_directories(material/test)
     include_directories(geometry/test)
     include_directories(angle/test)
+    include_directories(external_source/test)
     include_directories(transport/test)
     include_directories(diffusion/test)
     include_directories(solvers/test)
@@ -214,6 +215,7 @@ include_directories(utilities)
 include_directories(angle)
 include_directories(geometry)
 include_directories(material)
+include_directories(external_source)
 # level 2
 include_directories(transport)
 # level 3
@@ -246,6 +248,7 @@ add_subdirectory(utilities)
 add_subdirectory(material)
 add_subdirectory(geometry)
 add_subdirectory(angle)
+add_subdirectory(external_source)
 add_subdirectory(transport)
 add_subdirectory(diffusion)
 add_subdirectory(solvers)
@@ -259,8 +262,6 @@ add_subdirectory(postprocess)
 
 message("---------------------------------------------------------------")
 message("              SUMMARY OF CMAKE CONFIGURATION")
-
-
 message("---------------------------------------------------------------")
 message("++++ System:      ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}")
 message("++++ CXX:         ${CMAKE_CXX_COMPILER}")
