Shuffled equations and boundaries to separate folders (same namespace); code cleanup and such

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -193,6 +193,8 @@ if ( DETRAN_ENABLE_TEST )
     include_directories(geometry/test)
     include_directories(angle/test)
     include_directories(external_source/test)
+    include_directories(discretization/test)
+    include_directories(boundary/test)
     include_directories(transport/test)
     include_directories(diffusion/test)
     include_directories(solvers/test)
@@ -217,6 +219,8 @@ include_directories(geometry)
 include_directories(material)
 include_directories(external_source)
 # level 2
+include_directories(discretization)
+include_directories(boundary)
 include_directories(transport)
 # level 3
 include_directories(diffusion)
@@ -249,6 +253,8 @@ add_subdirectory(material)
 add_subdirectory(geometry)
 add_subdirectory(angle)
 add_subdirectory(external_source)
+add_subdirectory(discretization)
+add_subdirectory(boundary)
 add_subdirectory(transport)
 add_subdirectory(diffusion)
 add_subdirectory(solvers)
