--- a/src/angle/test/CMakeLists.txt
+++ b/src/angle/test/CMakeLists.txt
@@ -9,22 +9,25 @@ message( "++ Adding detran angle tests." )
 #------------------------------------------------------------------------------#
 
 ADD_EXECUTABLE(test_GaussLegendre           test_GaussLegendre.cc)
-TARGET_LINK_LIBRARIES(test_GaussLegendre    angle utilities)
+TARGET_LINK_LIBRARIES(test_GaussLegendre    angle)
 
 ADD_EXECUTABLE(test_QuadrupleRange          test_QuadrupleRange.cc)
-TARGET_LINK_LIBRARIES(test_QuadrupleRange   angle utilities)
+TARGET_LINK_LIBRARIES(test_QuadrupleRange   angle)
 
 ADD_EXECUTABLE(test_Collocated              test_Collocated.cc)
-TARGET_LINK_LIBRARIES(test_Collocated       angle utilities)
+TARGET_LINK_LIBRARIES(test_Collocated       angle)
 
 ADD_EXECUTABLE(test_Uniform                 test_Uniform.cc)
-TARGET_LINK_LIBRARIES(test_Uniform          angle utilities)
+TARGET_LINK_LIBRARIES(test_Uniform          angle)
 
 ADD_EXECUTABLE(test_TabuchiYamamoto         test_TabuchiYamamoto.cc)
-TARGET_LINK_LIBRARIES(test_TabuchiYamamoto  angle utilities)
+TARGET_LINK_LIBRARIES(test_TabuchiYamamoto  angle)
 
 ADD_EXECUTABLE(test_MomentToDiscrete        test_MomentToDiscrete.cc)
-TARGET_LINK_LIBRARIES(test_MomentToDiscrete angle utilities)
+TARGET_LINK_LIBRARIES(test_MomentToDiscrete angle)
+
+ADD_EXECUTABLE(test_SphericalHarmonics        test_SphericalHarmonics.cc)
+TARGET_LINK_LIBRARIES(test_SphericalHarmonics angle)
 
 #------------------------------------------------------------------------------#
 # Define tests
@@ -35,6 +38,5 @@ ADD_TEST(test_QuadrupleRange_basic  test_QuadrupleRange     0)
 ADD_TEST(test_Collocated            test_Collocated         0)
 ADD_TEST(test_Uniform               test_Uniform            0)
 ADD_TEST(test_TabuchiYamamoto       test_TabuchiYamamoto    0)
-ADD_TEST(test_MomentToDiscrete_1D   test_MomentToDiscrete   0)
-ADD_TEST(test_MomentToDiscrete_2D   test_MomentToDiscrete   0)
-
+ADD_TEST(test_MomentToDiscrete      test_MomentToDiscrete   0)
+ADD_TEST(test_SphericalHarmonics    test_SphericalHarmonics   0)
