--- a/src/boundary/test/CMakeLists.txt
+++ b/src/boundary/test/CMakeLists.txt
@@ -9,10 +9,10 @@ message( "++ Adding detran boundary tests." )
 #------------------------------------------------------------------------------#
 
 ADD_EXECUTABLE(test_BoundarySN              test_BoundarySN.cc)
-TARGET_LINK_LIBRARIES(BoundarySN            boundary)
+TARGET_LINK_LIBRARIES(test_BoundarySN       boundary)
 
 ADD_EXECUTABLE(test_BoundaryMOC             test_BoundaryMOC.cc)
-TARGET_LINK_LIBRARIES(BoundaryMOC           boundary)
+TARGET_LINK_LIBRARIES(test_BoundaryMOC      boundary)
 
 #------------------------------------------------------------------------------#
 # Define tests
