Updated transport routines for new namespaces and such

--- a/src/boundary/CMakeLists.txt
+++ b/src/boundary/CMakeLists.txt
@@ -1,5 +1,5 @@
 #------------------------------------------------------------------------------#
-# src/transport/CMakeLists.txt
+# src/boundary/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
 SET(LIB_NAME "boundary")
