Finished namespace switches and general code cleanup: verified test suite

--- a/src/diffusion/CMakeLists.txt
+++ b/src/diffusion/CMakeLists.txt
@@ -25,7 +25,7 @@ ADD_LIBRARY(diffusion
             ${SRC} 
 )
 TARGET_LINK_LIBRARIES( diffusion
-                       materials
+                       material
                        geometry
                        utilities
                        transport
