--- a/src/ioutils/CMakeLists.txt
+++ b/src/ioutils/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_LIBRARY(ioutils
             ${SRC} 
 )
 TARGET_LINK_LIBRARIES( ioutils
-                       materials
+                       material
                        geometry
                        utilities
                        transport
