--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -9,27 +9,14 @@ message( "++ Adding detran solvers tests." )
 #------------------------------------------------------------------------------#
 
 ADD_EXECUTABLE(test_SourceIteration test_SourceIteration.cc)
-TARGET_LINK_LIBRARIES(test_SourceIteration 
-                      solvers 
-                      transport 
-                      geometry 
-                      materials 
-                      utilities)
+TARGET_LINK_LIBRARIES(test_SourceIteration solvers )
 
 ADD_EXECUTABLE(test_PowerIteration test_PowerIteration.cc)
-TARGET_LINK_LIBRARIES(test_PowerIteration 
-                      solvers 
-                      transport 
-                      geometry 
-                      materials 
-                      utilities)
+TARGET_LINK_LIBRARIES(test_PowerIteration  solvers)
 
 if (DETRAN_ENABLE_PETSC)
-
 ADD_EXECUTABLE(test_InnerGMRES test_InnerGMRES.cc)
-TARGET_LINK_LIBRARIES(test_InnerGMRES 
-                      solvers)
-
+TARGET_LINK_LIBRARIES(test_InnerGMRES solvers)
 endif ()
 
 #------------------------------------------------------------------------------#
