Finished swig update for the new namespaces

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -1,66 +1,70 @@
 #------------------------------------------------------------------------------#
-# libdetran/src/drivers/CMakeLists.txt
+# src/drivers/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
-SET(DRIVERS_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+SET(LIB_NAME "detran")
+SET(EXE_NAME "xdetran")
 
-#-------------------------------------#
+SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
+#-----------------------------------------------------------------------------#
 # SOURCE
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-SET( DRIVERS_SRC 
-  Execute.cc
-  StupidParser.cc
+SET(SRC 
+    Execute.cc
+    StupidParser.cc
 )
 
-#-------------------------------------#
-# EXECUTABLE 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
+# EXECUTABLE
+#-----------------------------------------------------------------------------#
 
-ADD_EXECUTABLE( xdetran 
-                detran.cc 
+ADD_EXECUTABLE(${EXE_NAME} 
+               detran.cc 
 )
-TARGET_LINK_LIBRARIES( xdetran
-                       detran 
-                       solvers
-                       transport
-                       material
-                       angle
-                       geometry
-                       utilities
-                       ioutils
-                       ${GPERFTOOLS_LIBRARIES}                        
+TARGET_LINK_LIBRARIES(${EXE_NAME}
+                      ${LIB_NAME} 
+                      solvers
+                      transport
+                      material
+                      angle
+                      geometry
+                      utilities
+                      ioutils
+                      ${GPERFTOOLS_LIBRARIES}                        
 )
 INSTALL_TARGETS(/bin xdetran)
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # SHARED LIBRARY
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
 # This is the detran library to be linked against.
-ADD_LIBRARY( detran 
-             SHARED
-             ${DRIVERS_SRC} 
+ADD_LIBRARY(${LIB_NAME}
+            SHARED
+            ${SRC} 
 )
-TARGET_LINK_LIBRARIES( detran 
-                       solvers
-                       transport
-                       material
-                       angle
-                       geometry
-                       utilities
-                       ioutils
+TARGET_LINK_LIBRARIES(${LIB_NAME}
+                      solvers
+                      transport
+                      material
+                      angle
+                      geometry
+                      utilities
+                      ioutils
+                      postprocess
 )
 
-INSTALL_FILES(/include .hh)
-INSTALL_TARGETS(/lib detran)
+INSTALL_FILES(/include/${LIB_NAME} .hh)
+INSTALL_TARGETS(/lib ${LIB_NAME})
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # TESTING
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-if( DETRAN_ENABLE_TEST )
-    include_directories(${DRIVERS_DIR}/test)
-    add_subdirectory(${DRIVERS_DIR}/test)
+if(DETRAN_ENABLE_TEST)
+    include_directories(${SRC_DIR}/test)
+    add_subdirectory(${SRC_DIR}/test)
 endif()
 
