--- a/src/postprocess/CMakeLists.txt
+++ b/src/postprocess/CMakeLists.txt
@@ -1,40 +1,42 @@
 #------------------------------------------------------------------------------#
-# libdetran/src/postprocess/CMakeLists.txt
+# src/postprocess/CMakeLists.txt
 #------------------------------------------------------------------------------#
+
+SET(LIB_NAME "postprocess")
 
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # SOURCE
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
 SET(SRC
-  ReactionRates.cc
+    ReactionRates.cc
 )
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # SHARED LIBRARY
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-ADD_LIBRARY(postprocess
+ADD_LIBRARY(${LIB_NAME}
             SHARED
             ${SRC} 
 )
-TARGET_LINK_LIBRARIES( postprocess
-                       material
-                       geometry
-                       utilities
-                       transport                 
+TARGET_LINK_LIBRARIES(${LIB_NAME}
+                      material
+                      geometry
+                      utilities
+                      transport                 
 )
 
-INSTALL_FILES(/include .hh)
-INSTALL_TARGETS(/lib postprocess)
+INSTALL_FILES(/include/${LIB_NAME} .hh)
+INSTALL_TARGETS(/lib ${LIB_NAME})
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # TESTING
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-if( DETRAN_ENABLE_TEST )
+if(DETRAN_ENABLE_TEST)
     include_directories(${SRC_DIR}/test)
     add_subdirectory(${SRC_DIR}/test)
 endif()
