--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -1,14 +1,16 @@
 #------------------------------------------------------------------------------#
-# libdetran/src/angle/CMakeLists.txt
+# src/angle/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
-SET(ANGLE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+SET(LIB_NAME "angle")
 
-#-------------------------------------#
+SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
+#-----------------------------------------------------------------------------#
 # SOURCE
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-SET(ANGLE_SRC
+SET(SRC
     Collocated.cc
     GaussLegendre.cc
     LevelSymmetric.cc
@@ -23,49 +25,26 @@ SET(ANGLE_SRC
     UniformEqual.cc
 )
 
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # SHARED LIBRARY
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
-ADD_LIBRARY(angle
+ADD_LIBRARY(${LIB_NAME}
             SHARED
-            ${ANGLE_SRC} 
+            ${SRC} 
 )
-TARGET_LINK_LIBRARIES( angle
-                       utilities
-                       ${GPERFTOOLS_LIBRARIES}                        
+TARGET_LINK_LIBRARIES(${LIB_NAME}
+                      utilities                      
 )
 
-INSTALL_FILES(/include .hh)
-INSTALL_TARGETS(/lib angle)
+INSTALL_FILES(/include/${LIB_NAME} .hh)
+INSTALL_TARGETS(/lib ${LIB_NAME})
 
-#-------------------------------------#
-# PYTHON INTERFACE
-#-------------------------------------#
-
-#IF( DETRAN_ENABLE_PYTHON )
-
-#SET_SOURCE_FILES_PROPERTIES(detran_angle.i PROPERTIES CPLUSPLUS ON)
-#SWIG_ADD_MODULE(detran_angle python detran_angle.i )
-#SWIG_LINK_LIBRARIES(detran_angle
-#                    ${PYTHON_LIBRARIES} 
-#                    utilities 
-#                    angle)
-
-#INSTALL(FILES ${CMAKE_BINARY_DIR}/angle/detran_angle.py
-#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-#INSTALL(FILES ${CMAKE_BINARY_DIR}/angle/_detran_angle.so
-#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-
-#ENDIF()
-
-
-
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 # TESTING
-#-------------------------------------#
+#-----------------------------------------------------------------------------#
 
 if( DETRAN_ENABLE_TEST )
-    include_directories(${ANGLE_DIR}/test)
-    add_subdirectory(${ANGLE_DIR}/test)
+    include_directories(${SRC_DIR}/test)
+    add_subdirectory(${SRC_DIR}/test)
 endif()
