--- a/src/boundary/test/CMakeLists.txt
+++ b/src/boundary/test/CMakeLists.txt
@@ -8,16 +8,19 @@ message( "++ Adding detran boundary tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
-ADD_EXECUTABLE(test_BoundarySN              test_BoundarySN.cc)
-TARGET_LINK_LIBRARIES(test_BoundarySN       boundary)
+ADD_EXECUTABLE(test_BoundarySN                  test_BoundarySN.cc)
+TARGET_LINK_LIBRARIES(test_BoundarySN           boundary)
 
-ADD_EXECUTABLE(test_BoundaryMOC             test_BoundaryMOC.cc)
-TARGET_LINK_LIBRARIES(test_BoundaryMOC      boundary)
+ADD_EXECUTABLE(test_BoundaryMOC                 test_BoundaryMOC.cc)
+TARGET_LINK_LIBRARIES(test_BoundaryMOC          boundary)
+
+ADD_EXECUTABLE(test_BoundaryDiffusion           test_BoundaryDiffusion.cc)
+TARGET_LINK_LIBRARIES(test_BoundaryDiffusion    boundary)
 
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
 
-ADD_TEST(test_BoundarySN    test_BoundarySN       0)
-ADD_TEST(test_BoundaryMOC   test_BoundaryMOC      0)
-
+ADD_TEST(test_BoundarySN            test_BoundarySN         0)
+ADD_TEST(test_BoundaryMOC           test_BoundaryMOC        0)
+ADD_TEST(test_BoundaryDiffusion     test_BoundaryDiffusion  0)
