--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 #-----------------------------------------------------------------------------#
 
 SET(SRC
+    DiffusionFixedSourceSolver.cc
 	DiffusionGainOperator.cc
     DiffusionLossOperator.cc
 	Eigensolver.cc
