renames and such

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -28,3 +28,7 @@ INSTALL(FILES ${CMAKE_BINARY_DIR}/python/_pydetran.so
         
 # Install the helper initialization file
 INSTALL_FILES(/python/detran __init__.py)
+
+# add the utilities
+add_subdirectory(pydetranutils)
+
