--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -12,14 +12,14 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(SRC
     DiffusionFixedSourceSolver.cc
-	  DiffusionGainOperator.cc
+    DiffusionGainOperator.cc
     DiffusionLossOperator.cc
-	  Eigensolver.cc
-	  EigenSLEPc.cc
+    Eigensolver.cc
+	EigenSLEPc.cc
     InnerIteration.cc
     SourceIteration.cc
     InnerGMRES.cc
-    GaussSeidel.cc
+    GaussSeidelMG.cc
     KrylovMG.cc
     PowerIteration.cc
     PreconditionerWG.cc
@@ -35,6 +35,7 @@ ADD_LIBRARY(${LIB_NAME}
             ${SRC} 
 )
 TARGET_LINK_LIBRARIES(${LIB_NAME}
+                      callow
                       diffusion
                       transport
                       angle
