Added eigen creator and stubbed a fixed source manager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -249,18 +249,18 @@ endif()
 
 add_subdirectory(utilities)
 add_subdirectory(callow)
-#add_subdirectory(material)
-#add_subdirectory(angle)
-#add_subdirectory(geometry)
-#add_subdirectory(external_source)
-#add_subdirectory(discretization)
-#add_subdirectory(boundary)
-#add_subdirectory(transport)
-#add_subdirectory(diffusion)
-#add_subdirectory(solvers)
-#add_subdirectory(ioutils)
-#add_subdirectory(postprocess)
-#add_subdirectory(drivers)
+add_subdirectory(material)
+add_subdirectory(angle)
+add_subdirectory(geometry)
+add_subdirectory(external_source)
+add_subdirectory(discretization)
+add_subdirectory(boundary)
+add_subdirectory(transport)
+add_subdirectory(diffusion)
+add_subdirectory(solvers)
+add_subdirectory(ioutils)
+add_subdirectory(postprocess)
+add_subdirectory(drivers)
 
 # Python things for installation
 if( DETRAN_ENABLE_PYTHON )
