--- a/src/callow/solver/CMakeLists.txt
+++ b/src/callow/solver/CMakeLists.txt
@@ -1,14 +1,16 @@
 # Set source
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(SOLVER_SRC
+  ${SRC_DIR}/LinearSolver.cc
   ${SRC_DIR}/Richardson.cc
   ${SRC_DIR}/Jacobi.cc
   ${SRC_DIR}/GaussSeidel.cc
   ${SRC_DIR}/GMRES.cc
   ${SRC_DIR}/PetscSolver.cc
   ${SRC_DIR}/LinearSolverCreator.cc
-  ${SRC_DIR}/PowerIteration.cc
   ${SRC_DIR}/SlepcSolver.cc
+  ${SRC_DIR}/EigenSolver.cc
+  ${SRC_DIR}/PowerIteration.cc
   PARENT_SCOPE
 )
 
